After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734839 - Don't enable hi-dpi on monitors with broken EDID
Don't enable hi-dpi on monitors with broken EDID
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-08-15 08:40 UTC by Bastien Nocera
Modified: 2014-10-30 16:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: Don't check for hi-dpi on monitors with broken EDID (1.38 KB, patch)
2014-10-30 16:39 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-08-15 08:40:25 UTC
This was added to X:
http://cgit.freedesktop.org/~daniels/xserver/commit/?h=lodpi&context=4000

But should also be worked around in the Wayland backend for our XRandR compat layer.
Comment 1 Bastien Nocera 2014-10-30 10:39:53 UTC
I've added a hack (bug 738748) to avoid hi-dpi being set on those types of devices, but better would be to correct the dimensions so hi-dpi can be applied even if the manufacturer put the aspect ratio in the wrong place.
Comment 2 Owen Taylor 2014-10-30 16:09:33 UTC
(In reply to comment #1)
> I've added a hack (bug 738748) to avoid hi-dpi being set on those types of
> devices, but better would be to correct the dimensions so hi-dpi can be applied
> even if the manufacturer put the aspect ratio in the wrong place.

Do you think the X code you pointed to is doing anything other than multiplying by the default DPI? X.org reports 96dpi via ScreenSizeMM these days without regard to what it is saying in detail per monitors.
Comment 3 Bastien Nocera 2014-10-30 16:35:01 UTC
I guess monitorResolution is never set to anything by default. It's likely that the equivalent of bug 738748 is enough then.
Comment 4 Bastien Nocera 2014-10-30 16:39:11 UTC
Created attachment 289685 [details] [review]
wayland: Don't check for hi-dpi on monitors with broken EDID

If the monitor reports a width/height that looks suspiciously like an
aspect ratio (16/9 or 16/10) don't check for hi-dpi. We can assume that
makers of devices that do support hi-dpi aren't so careless.

See http://cgit.freedesktop.org/~daniels/xserver/commit/?h=lodpi
Comment 5 Owen Taylor 2014-10-30 16:44:40 UTC
Review of attachment 289685 [details] [review]:

Looks good
Comment 6 Bastien Nocera 2014-10-30 16:46:22 UTC
Attachment 289685 [details] pushed as 13b6bd2 - wayland: Don't check for hi-dpi on monitors with broken EDID